WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87869
[EFL] Compilation warning in DumpRenderTreeView.cpp on 64-Bit
https://bugs.webkit.org/show_bug.cgi?id=87869
Summary
[EFL] Compilation warning in DumpRenderTreeView.cpp on 64-Bit
Chris Dumez
Reported
2012-05-30 10:06:27 PDT
The "%lld" format specifier is used to print an int64_t value in DumpRenderTreeView.cpp. This causes a warning on 64-Bit where "%ld" is expected. We should make use of the PRId64 macro from inttypes.h to avoid this issue.
Attachments
Patch
(2.06 KB, patch)
2012-05-30 10:10 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-05-30 10:10:39 PDT
Created
attachment 144851
[details]
Patch
Raphael Kubo da Costa (:rakuco)
Comment 2
2012-05-30 10:38:51 PDT
Comment on
attachment 144851
[details]
Patch Looks good.
Gyuyoung Kim
Comment 3
2012-05-30 17:33:51 PDT
Comment on
attachment 144851
[details]
Patch LGTM.
WebKit Review Bot
Comment 4
2012-06-04 00:00:33 PDT
Comment on
attachment 144851
[details]
Patch Clearing flags on attachment: 144851 Committed
r119373
: <
http://trac.webkit.org/changeset/119373
>
WebKit Review Bot
Comment 5
2012-06-04 00:00:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug