[EFL] Compilation warning in DumpRenderTreeView.cpp on 64-Bit https://bugs.webkit.org/show_bug.cgi?id=87869

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-06-04
Reviewed by Andreas Kling.

Replace %lld by PRId64 macro to print an int64_t value and silent a
compilation warning on 64-Bit.

* DumpRenderTree/efl/DumpRenderTreeView.cpp:
(onExceededApplicationCacheQuota):

Canonical link: https://commits.webkit.org/106041@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119373 268f45cc-cd09-0410-ab3c-d52691b4dbfc